# suffix_tree

./: Cargo.toml
benches/: lcs_codon_sequences.rs
examples/: find.rs  lcs.rs  visualize.rs
src/: alphabet.rs  lib.rs
tests/: integration.rs
tests/resources/: codon_sequences.txt
