[package]
name = "suffix_tree"
version = "0.1.0"
authors = ["Georg Streich <georg.streich@bluewin.ch>"]

[dependencies]
bit-vec = "*"
structopt = "*"
indoc = "*"
smallvec = "*"
lazy_static = "*"

[dev-dependencies]
criterion = "*"

[profile.release]
debug = true

[[bench]]
name = "lcs_codon_sequences"
harness = false
